# rabtize

./: .build.yml  .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml
rabtize/: main.py  util.py
results/: en-sahih-international-simple.json
